# rlgym-sim-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo_publish.yml  rust.yml  rust_compile_linux.yml  rust_compile_win.yml
collision_meshes/soccar/: mesh_0.cmf.gpg  mesh_1.cmf.gpg  mesh_10.cmf.gpg  mesh_11.cmf.gpg  mesh_12.cmf.gpg  mesh_13.cmf.gpg  mesh_14.cmf.gpg  mesh_15.cmf.gpg  mesh_2.cmf.gpg  mesh_3.cmf.gpg  mesh_4.cmf.gpg  mesh_5.cmf.gpg  mesh_6.cmf.gpg  mesh_7.cmf.gpg  mesh_8.cmf.gpg  mesh_9.cmf.gpg
examples/: basic_example.rs  lib.rs
src/: common_values.rs  gym.rs  lib.rs  make.rs  math.rs
src/action_parsers/: action_parser.rs  continous_act.rs  default_act.rs  discrete_act.rs  mod.rs  test_parser.rs
src/conditionals/: common_conditions.rs  custom_conditions.rs  extra_conditions.rs  mod.rs  terminal_condition.rs
src/envs/: game_match.rs  mod.rs
src/gamestates/: game_state.rs  mod.rs  physics_object.rs  player_data.rs
src/obs_builders/: advanced_obs.rs  mod.rs  obs_builder.rs
src/render/: renderer.rs
src/reward_functions/: combined_reward.rs  mod.rs  reward_fn.rs
src/reward_functions/common_rewards/: ball_goal_rewards.rs  misc_rewards.rs  mod.rs  player_ball_rewards.rs
src/sim_wrapper/: wrapper.rs
src/state_generator/: combined_gen.rs  common_state_mods.rs  mod.rs  state_gen.rs  state_modifier.rs
src/state_setters/: default_state.rs  mod.rs  random_state.rs  replay_setter.rs  state_setter.rs  weighted_state_setter.rs
src/state_setters/wrappers/: car_wrapper.rs  mod.rs  physics_wrapper.rs  state_wrapper.rs
tests/: team_change_test.rs  tester.rs  tester_render.rs
