[package]
name = "rlgym_sim_rs"
description = "Rust port of RLGym-sim"
categories = ["science"]
keywords = ["rocket-league", "rlgym", "machine-learning", "gym"]
version = "0.8.0-alpha"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/JeffA233/rlgym-sim-rs"
exclude = ["examples/lib.rs", "collision_meshes"]
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rlgym_sim_rs"
crate-type = ["cdylib", "rlib"]
# doctest = false

[dependencies]
ndarray = { version = "0.15.6"}
rand = { version = "0.8.5", features=["small_rng"]}
zip = { version = "2.0.0"}
rocketsim_rs = {version = "0.29.3", features=["bin", "serde_utils"]}
memmap2 = {version = "0.9.4"}
ndarray-npy = {version = "0.8.1"}
serde = {version = "1.0.201", features = ["derive"]}
serde_arrays = {version = "0.1.0"}

# [build]
# target = "x86_64-pc-windows-gnu"

# [profile.release]
# lto = true

